--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,12 @@
         <div class="earn-area earn3" data-link="https://example.com" style="display: none;"></div>
         <div class="earn-area earn4" data-link="https://example.com" style="display: none;"></div>
         <div class="earn-area earn5" data-link="https://example.com" style="display: none;"></div>
+        <!-- Новые области -->
+        <div class="earn-area earn6" style="display: none;"></div>
+        <div class="earn-area earn7" style="display: none;"></div>
+        <div class="earn-area earn8" style="display: none;"></div>
+        <div class="earn-area earn9" style="display: none;"></div>
+        <div class="earn-area earn10" style="display: none;"></div>
     </div>
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
