--- a/static/styles.css
+++ b/static/styles.css
@@ -139,3 +139,51 @@ html, body {
     width: 37%;
     height: 5%;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #2b2b2b;
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+
+.profile {
+    position: absolute;
+    top: 1%;
+    left: 5%;
+    width: 90%;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    z-index: 2; /* Над фоном */
+    background: none; /* Убираем фон */
+    padding: 0;
+}
+
+.avatar {
+    width: 10%;
+    height: 100%;
+    border-radius: 10px;
+    margin-right: 10px;
+    background-color: transparent; /* Прозрачный фон у аватара */
+}
+
+#username {
+    font-size: 18px;
+    font-weight: bold;
+    flex-grow: 1;
+    text-align: left;
+    padding-left: 10px;
+    background: none; /* Без фона */
+}
+
+#points {
+    font-size: 18px;
+    text-align: right;
+    padding-right: 10px;
+    background: none; /* Без фона */
+}
+
