--- a/static/styles.css
+++ b/static/styles.css
@@ -141,12 +141,12 @@ html, body {
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #2b2b2b;
-    color: white;
-    text-align: center;
-    padding: 20px;
+    margin: 0;
+    padding: 0;
+    background: none; /* Убираем фон */
+    overflow: hidden; /* Убираем прокрутку, если она не нужна */
 }
+
 
 .profile {
     position: absolute;
