--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <!-- Профиль пользователя -->
     <div class="profile">
-        <img id="avatar" class="avatar" src="default_avatar.png" alt="Avatar">
+        <img id="avatar" class="avatar" src="" alt="Avatar">
         <p id="username">User name</p>
         <p id="points">Points: 0</p>
     </div>
@@ -52,7 +52,6 @@
         if (telegram.initDataUnsafe.user) {
             const userId = telegram.initDataUnsafe.user.id;
             const username = telegram.initDataUnsafe.user.username || "No username";
-            const botToken = '7296432704:AAEMD73KfNm9OMdaYM8fphlG6Jhb246ByxI'; // Замените на свой токен
 
             // Регистрация пользователя на сервере
             fetch('/register', {
@@ -63,7 +62,7 @@
             .then(response => response.json())
             .then(data => {
                 if (data.status === 'success') {
-                    const avatarUrl = data.avatar_url || 'default_avatar.png';
+                    const avatarUrl = data.avatar_url || '/static/default_avatar.png'; // Путь к аватару
                     const points = data.points || 0;
                     updateUserProfile(avatarUrl, username, points);
                 }
