Update CSS and HTML for user profile and background

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
     <!-- Профиль пользователя -->
     <div class="profile">
-        <img id="avatar" class="avatar" src="" alt="Avatar">
+        <img id="avatar" class="avatar" src="/static/default_avatar.png" alt="Avatar">
         <p id="username">User name</p>
         <p id="points">Points: 0</p>
     </div>
