--- a/templates/index.html
+++ b/templates/index.html
@@ -122,6 +122,15 @@
         });
     </script>
 
+    <div class="profile">
+    <div class="avatar-container">
+        <img id="avatar" class="avatar" src="/static/default_avatar.png" alt="Avatar">
+    </div>
+    <p id="username">User name</p>
+    <p id="points">Points: 0</p>
+    </div>
+
+
     <!-- Скрипт для работы с кликабельными зонами -->
     <script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
